--- a/R/01_load.qmd
+++ b/R/01_load.qmd
@@ -4,6 +4,18 @@ format: html
 editor: visual
 ---
 
-## Loading Data
+# Loading Data
 
-# change
+##### This code is directly copied from lab 4 - but we can be inspired as a framework 
+
+```{r}
+# Create the data directory programmatically
+dir.create(path = "data")
+
+# Retrieve the data directly
+diabetes_data <- read_csv(file = "https://hbiostat.org/data/repo/diabetes.csv")
+
+# Write the data to disk
+write_csv(x = diabetes_data,
+          file = "data/diabetes.csv")
+```
