--- a/R/02_clean.qmd
+++ b/R/02_clean.qmd
@@ -5,3 +5,49 @@ editor: visual
 ---
 
 ## Clean Data
+
+#### 1. Combine data frames into one
+
+```{r}
+
+# do full join to preserve data. The combination of PG.ProteinGroups and PG.Genes is the same for all data frames, so we join by both columns
+
+df_ful <- df_hsc |> 
+  full_join(df_clp, by=c("PG.ProteinGroups", "PG.Genes")) |> 
+  full_join(df_cmp, by=c("PG.ProteinGroups", "PG.Genes")) |> 
+  full_join(df_mep, by=c("PG.ProteinGroups", "PG.Genes")) |>
+  full_join(df_gmp, by=c("PG.ProteinGroups", "PG.Genes")) 
+```
+
+#### 2. Change column names for readability
+
+```{r}
+
+# get column names
+print(colnames(df_ful))
+
+# We can easily see how many replicates we have per cell type. Change all column names at once
+df_ful <- setNames(df_ful, c("ProteinGroups",
+                             "Genes",
+                             "HSC_rep_1",
+                             "HSC_rep_2",
+                             "HSC_rep_3",
+                             "HSC_rep_4",
+                             "CLP_rep_1",
+                             "CLP_rep_2",
+                             "CLP_rep_3",
+                             "CLP_rep_4",
+                             "CLP_rep_5",
+                             "CMP_rep_1",
+                             "CMP_rep_2",
+                             "CMP_rep_3",
+                             "CMP_rep_4",
+                             "MEP_rep_1",
+                             "MEP_rep_2",
+                             "MEP_rep_3",
+                             "MEP_rep_4",
+                             "GMP_rep_1",
+                             "GMP_rep_2",
+                             "GMP_rep_3",
+                             "GMP_rep_4"))
+```
