--- a/magdas_version.qmd
+++ b/magdas_version.qmd
@@ -8,6 +8,8 @@ editor: visual
 library("tidyverse")
 ```
 
+### Loading data
+
 ```{r}
 df_hsc <- read_csv2("local_data/group6_data_HSC_Report.csv", na = ("NaN"))
 df_clp <- read_csv2("local_data/group6_data_CLP_Report.csv", na = ("NaN"))
@@ -15,6 +17,8 @@ df_cmp <- read_csv2("local_data/group6_data_CMP_Report.csv", na = ("NaN"))
 df_gmp <- read_csv2("local_data/group6_data_GMP_Report.csv", na = ("NaN"))
 df_mep <- read_csv2("local_data/group6_data_MEP_Report.csv", na = ("NaN"))
 ```
+
+### Column names
 
 ```{r}
 #renaming colnames
@@ -37,6 +41,8 @@ rename_cols <- function(data) {
 }
 ```
 
+### Pivoting data
+
 ```{r}
 #pivot longer the data
 df_hsc_long <- df_hsc |> 
@@ -57,7 +63,7 @@ proteomics_pivot_longer <- function(data){
     cols = !starts_with("PG"), 
     names_to = "replicate", 
     values_to = "intensity"
-}
+    }
 ```
 
 ```{r}
