--- a/R/02_clean.qmd
+++ b/R/02_clean.qmd
@@ -68,11 +68,10 @@ We notice that the df_ful has 3763 observations (rows) of 23 variables and the d
 
 #### 3. Log2-transform the data
 
-The data is Log2 transformed for every numeric value in the dataframe with pseudo-count of 1 (to avoid zeros and negative values), to compress the range of intensities and achieve a log-normal distribution.
-
 ```{r}
 
-# 
+# The data is Log2 transformed for every numeric value in the dataframe with pseudo-count of 1 (to avoid zeros and negative values), to compress the range of intensities and achieve a log-normal distribution.
+
 
 df_log <- df_ful |> 
   mutate(across(where(is.numeric), ~log2(. +1)))
