--- a/R/03_augment.qmd
+++ b/R/03_augment.qmd
@@ -16,11 +16,14 @@ df_log_long <- df_long |>
 
 ```
 
-## Normalization of Intensity 
+## Deal with Missing Values by Normalization of Intensity 
 
-For each observation (a replicate of a particular cell type) we wish to nomalize the intensity compared to all proteomics observation of that cell type. This is why we group the data by sample (fx hsc_rep_1 is one group and clp_rep_2 is another group). We then normalize the data by dividing individual intensities with the median of the sample group.
+The data contains many missing values. The reason values are missing is because they are below the detection limit of the intensity measurer. NA's should not be replaced by 0, instead they should be replaced with the 1st percentile of the normalized distribution of each cell type replicate (sample group).
+
+For each observation (a replicate of a particular cell type) we wish to nomalize the intensity compared to all proteomics observation of that cell type. This is why we group the data by sample (fx hsc_rep_1 is one group and clp_rep_2 is another group). We then normalize the data by dividing individual intensities with the median of the sample group. We then use the normalized data to replace missing values.
 
 ```{r}
+#Check that the grouping gives 21 median values
 df_log_long |> 
   group_by(sample) |> 
   summarize(median(intensity, na.rm = TRUE))
@@ -35,16 +38,7 @@ df_norm_long <- df_log_long |>
 ```
 
 ```{r}
-# Test normalization with density plot --> medians are equal now
-
-df_norm_long |> 
-  ggplot(aes(x=intensity, colour=sample)) +
-  geom_density() +
-  theme_classic()
-
-```
-
-```{r}
+#Have a secon opinion on this code
 #replace NA with 1st percentile of sample type
 df_nona_long <- df_norm_long |> 
   group_by(sample) |> 
@@ -58,13 +52,4 @@ df_nona_long <- df_norm_long |>
     #is.na(intensity) ~ quantile(intensity, probs = 0.01, na.rm = TRUE),
     .default = intensity
   ))
-```
-
-```{r}
-# Check density -> Not ideal, many NA's distort distribution. Feature-wise would be ideal, b ut couldn't figure out how to operate NaIsMindet row-wise
-
-df_nona_long |> 
-  ggplot(aes(x=intensity, colour=sample)) +
-  geom_density() +
-  theme_classic()
 ```
