--- a/R/04_describe.qmd
+++ b/R/04_describe.qmd
@@ -6,6 +6,12 @@ editor: visual
 
 ## Describe Data
 
+-   What do these data show?
+
+-   How many observations? How many rows and columns?
+
+-   What is intensity?
+
 ## Normalization plot before removing NAs
 
 ```{r}
@@ -18,7 +24,7 @@ df_norm_long |>
 
 ```
 
-## Density Plot 
+## Density Plot
 
 ```{r}
 # Check density -> Not ideal, many NA's distort distribution. Feature-wise would be ideal, b ut couldn't figure out how to operate NaIsMindet row-wise
@@ -28,3 +34,7 @@ df_nona_long |>
   geom_density() +
   theme_classic()
 ```
+
+## Summary Statistics / descriptive plots
+
+-   here we could have some scatter plots, density plots etc.
