--- a/R/02_clean_long.qmd
+++ b/R/02_clean_long.qmd
@@ -63,6 +63,17 @@ df_ful <- setNames(df_ful, c("protein_groups",
                              "gmp_rep_4"))
 ```
 
+## Shortening Protein and Gene Names
+
+The variables protein_groups and genes in some cases contain multiple names. The reason for this is that if a cell contains more than one protein name (fx Q8BSP2;Q8BSP2-2;Q8BSP2-3) it is because they are protein isomers, and there is no means of discerning which of protein isomers is actually measured. For the prupose of tidy data we decide to keep only the first name in that column, and an \_group is added to signify that more isomers were there in the original dataset.
+
+```{r}
+df_ful |> 
+ # select(protein_groups) |> 
+ # str_detect(protein_groups,";")
+    mutate(protein_groups = str_split_1(protein_groups,";"))[1] 
+```
+
 ## Lengthening the Data
 
 There are four or five replicates of each cell type, that are currently stored as 21 variables all with measures of intensity. We use pivot_longer to lengthen the data so that there is one intensity column and one 'sample' column specifying which replicate and which cell type is referred to.
