--- a/R/03_augment.qmd
+++ b/R/03_augment.qmd
@@ -25,7 +25,7 @@ For each observation (a replicate of a particular cell type) we wish to nomalize
 ```{r}
 #Check that the grouping gives 21 median values
 df_log_long |> 
-  group_by(sample) |> 
+  group_by(cell_type,replicate_n) |> 
   summarize(median(intensity, na.rm = TRUE))
 ```
 
@@ -34,7 +34,7 @@ Normalize data to impute missing values for NA.
 ```{r}
 #Normalize data
 df_norm_long <- df_log_long |> 
-  group_by(sample) |> 
+  group_by(cell_type, replicate_n) |> 
   #normalizing by dividing each intensity value with the median intensity of all proteins from that sample
   mutate(intensity = intensity/median(intensity, na.rm = TRUE))
 ```
@@ -45,7 +45,7 @@ Imputing missing values/NAs
 #Have a secon opinion on this code
 #replace NA with 1st percentile of sample type
 df_no_na_long <- df_norm_long |> 
-  group_by(sample) |> 
+  group_by(cell_type,replicate_n) |> 
   mutate(intensity = case_when(
     #if an NA is detected the value is transformed to 1st percentile of that samples group
     #-3.090 is Z-score for 0.1st percentile
@@ -64,15 +64,22 @@ df_no_na_long <- df_norm_long |>
 The mean value between each replicate of the cell samples are estimated along with the standard deviation, to create a new tibble which is used to create a volcano plot for the fold change.
 
 ```{r}
-df_no_na_long |> 
-  mutate()
 
-
-group_by()
-
-df_no_na_long |> 
+df_mean_intensitities <- df_no_na_long |> 
+  group_by(protein_groups,cell_type) |> 
   summarise(
     mean = mean(intensity),
     sd = sd(intensity)
     )
+#df_no_na_long |> 
+  #mutate()
+
+
+#group_by()
+
+#df_no_na_long |> 
+  #summarise(
+    #mean = mean(intensity),
+    #sd = sd(intensity)
+    #)
 ```
